Updated HTML template

--- a/apache2-standalone/roles/webdeploy/templates/index.html.j2
+++ b/apache2-standalone/roles/webdeploy/templates/index.html.j2
@@ -1,10 +1,10 @@
 <html>
  <head>
-  <title>Ansible Application</title>
+  <title>Ansible Hello World Application</title>
  </head>
  <body>
   <h1>
-    This is Prmiary key Teams ansible deployment 2.0
+    This is Hello World application from Prmiary Key Team using Ansible Playbook
   </h1>
 </body>
 </html>
